# Skycord

./: .gitmodules  README.md  pyproject.toml
skycord/: airports.py  options.py  plotter.py
tests/: test_skycord.py
