[tool.poetry]
name = "skycord"
version = "0.1.0"
description = ""
authors = ["Kristian Zarębski <krizar312@gmail.com>"]
include = ["skycord/world_of_airports/airport_finder.py"]

[tool.poetry.dependencies]
python = "^3.10"
SimConnect = "^0.4.26"
discord2 = "^2.0.1"
matplotlib = "^3.5.2"
prompt-toolkit = "^3.0.30"
keyboard = "^0.13.5"
numpy = "^1.23.0"
pygmt = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
